# dospc-sim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENTS.md  batch-tasks-guide-for-agents.md  bug-reports.tasks.md  command-compatibility.md  performance-improvements.tasks.md
src/dospc_sim/: __init__.py  cli.py  dos_shell.py  dos_shell_cli.py  editor.py  filesystem.py  jcs.py  main.py  parser.py  parser_ast.py  shell_commands.py  ssh_server.py  ui_panels.py  users.py
tests/: __init__.py  test_cli.py  test_dos_shell.py  test_dos_shell_cli.py  test_dos_shell_shared.py  test_editor.py  test_filesystem.py  test_integration.py  test_jcs.py  test_main.py  test_parser.py  test_shell_batch.py  test_shell_commands.py  test_shell_redirection.py  test_users.py  test_widgets.py
